# mixmind

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/ai/: __init__.py  agent.py  client.py  exceptions.py  llm_manager.py  metrics.py  mix_rule_engine.py  recommendation_assembler.py  schemas.py
backend/app/ai/prompts/: __init__.py  dj_system_prompt.md
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/endpoints/: ai.py  analysis.py  demo.py  storage.py  tracks.py
backend/app/application/dto/: api.py  demo_media.py
backend/app/application/ports/: audio_analyzer.py  llm_provider.py  storage.py
backend/app/application/use_cases/analysis/: analyze_track.py
backend/app/application/use_cases/analysis/analyze_track/: service.py
backend/app/application/use_cases/compatibility/: compare_tracks.py  score_mix.py
backend/app/application/use_cases/track/: dto.py
backend/app/application/use_cases/track/create/: request.py  response.py  use_case.py
backend/app/audio/services/: analyzer.py  base_image_generator.py  converter.py  spectrogram.py  waveform.py
backend/app/core/: config.py  constants.py  exceptions.py  log_utils.py  logging.py  security.py
backend/app/domain/entities/: recommendation.py  track.py
backend/app/domain/repositories/: track_repository.py
backend/app/domain/value_objects/: compatibility.py  visualization.py
backend/app/infrastructure/audio/: analyzer.py  spectrogram.py  waveform.py
backend/app/infrastructure/database/: config.py  session.py
backend/app/infrastructure/database/mappers/: __init__.py  track_mapper.py
backend/app/infrastructure/database/models/: __init__.py  track_model.py
backend/app/infrastructure/llm/: __init__.py  agent.py  cache.py  client.py  exceptions.py  llm_manager.py  mix_rule_engine.py  model_registry.py  recommendation_assembler.py  schemas.py  text_schemas.py
backend/app/infrastructure/llm/prompts/: __init__.py  dj_system_prompt.md
backend/app/infrastructure/repositories/: __init__.py  sqlalchemy_track_repository.py
backend/app/infrastructure/storage/: demo_media.py  storage_service.py  supabase_storage.py
backend/app/schemas/: analysis.py  api.py  audio.py  recommendation.py  response.py  spectrogram.py  waveform.py
backend/app/services/: analysis_service.py  compatibility_service.py  mix_scoring_service.py  recommendation_service.py  storage_service.py
backend/app/services/infrastructure/: storage_service.py
backend/app/utils/: file_utils.py  log_utils.py
backend/migrations/: env.py
backend/migrations/versions/: 20260718_0001_create_tracks.py
backend/scripts/: analysis_memory_smoke.py  ingest_demo_media.py
backend/tests/: conftest.py  test_ai.py  test_analysis_endpoint.py  test_analysis_service.py  test_analysis_session.py  test_audio_analyzer.py  test_cache.py  test_compatibility_service.py  test_demo_media.py  test_dj_agent.py  test_health.py  test_llm_manager.py  test_llm_robustness.py  test_metrics.py  test_mix_scoring_service.py  test_model_registry.py  test_spectrogram_generator.py  test_spectrogram_schema.py  test_storage_service.py  test_track_endpoints.py  test_track_use_cases.py
backend/tests/integration/: conftest.py
backend/tests/integration/repositories/: test_track_repository.py
frontend/: .gitignore  next.config.ts  (+3 more)
(+92 files in other folders)
